--- a/about.html
+++ b/about.html
@@ -1,3 +1,3 @@
 <html>
-  <p>This project will examine various mesaures commonly used to prevent car crashes in Chicago, namely speed limits and traffic lights, and see if they have an effect on the crash rates. It will also see which types of roads and conditions are most prone to crashes. These goals will be acheived by tracking the aforementioned statistics from official Chicago Police Departement and plotting them on a map of Chicago's roads.</p>
+  <p>Don't be rash with car crash(es) compares speed limits, presence of working traffic controls, and location of car crashes over time to determine if any of these factors have ample influence on dangerous crashes This study only examines crashes with 1 or more injuries in Chicago, Illinois.</p></p>
 </html>
