--- a/static/about.html
+++ b/static/about.html
@@ -1,3 +1,16 @@
-<html>
-  <p>This project will examine various mesaures commonly used to prevent car crashes in Chicago, namely speed limits and traffic lights, and see if they have an effect on the crash rates. It will also see which types of roads and conditions are most prone to crashes. These goals will be acheived by tracking the aforementioned statistics from official Chicago Police Departement and plotting them on a map of Chicago's roads.</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    {% include 'navbar.html'}
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
+
