--- a/static/about.html
+++ b/static/about.html
@@ -8,7 +8,26 @@
   </head>
   <body>
     {% include 'navbar.html'}
+
+    <h1>About</h1>
+    <p>Speed limits are often touted as a cheap, easy way to stop speeding. Traffic control devices such as stop signs and traffic lights are hailed with creating safer roads. 
+    </p>
+    <p>But is this true? Are these measures as effective at reducing fatalities as people think? Or, does the street being a 4-way intersection liken the chance of dangerous crashes more than any of these factors?</p>
+
+    <p>In "Don't be Rash with Car Crash(es)", I compare data from car crashes in Chicago with 1 or more fatalities or injuries with the speed limits, traffic control devices, 
+      and street types where the accident took place. When we're building our roads, should we avoid certain street types and nail the trees with speed limits? </p>
+      
+      <p>What measures, if any, could reduce the chance of dangerous crashes?</p>
+
+    <h2>Prototypes</h2>
+    <img src="prototype10.jpg" alt="prototype 1 part 1" width="150">
+    <img src="prototype11.jpg" alt="prototype 1 part 2" width="150">
+    <p>The first prototype was this: it was a little messy and the graphs were not suited to the message. After feedback I revised them.</p>
+    <img src="prototype20.jpg" alt="prototype 2 part 1" width="150">
+    <img src="prototype21.jpg" alt="prototype 2 part 2" width="150">
+
     
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
